--- a/cg/.obsidian/app.json
+++ b/cg/.obsidian/app.json
@@ -6,5 +6,6 @@
     "downscalePercent": 100
   },
   "showLineNumber": false,
-  "showIndentGuide": false
+  "showIndentGuide": false,
+  "spellcheck": false
 }
